# cpsat-utils

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml  release.yml
benchmarks/piecewise/: README.md  __main__.py  _instances.py  _solvers.py  _solvers_pyomo.py  _stress.py  _stress_constant.py  compare_pyomo.py
benchmarks/piecewise/results/: 2026-03-15-stress.txt  2026-03-15.txt
examples/: README.md  budget_allocation.py  energy_dispatch.py  pricing_tiers.py
src/cpsat_utils/: __init__.py  hints.py  io.py  testing.py
src/cpsat_utils/piecewise/: __init__.py  _constant.py  _constraints.py  _helpers.py  _linear.py
tests/: test_basics.py  test_hints.py  test_io.py  test_version.py
tests/piecewise/: test_constant.py  test_linear.py
