[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "cpsat-utils"
version = "0.2.1"
description = "A Python package of utilities for Google's ortools CP-SAT solver."
readme = "README.md"
authors = [
    { name = "Dominik Krupke", email = "krupked@gmail.com" }
]
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["ortools>=9.10"]

[project.urls]
Homepage = "https://github.com/d-krupke/cpsat-utils"
Repository = "https://github.com/d-krupke/cpsat-utils"
Issues = "https://github.com/d-krupke/cpsat-utils/issues"

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest", "pre-commit", "ruff"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
